--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,14 @@ flower = "*"
 django-redis = "*"
 whitenoise = "*"
 gunicorn = "*"
+django-filter = "*"
+djangorestframework = "*"
+djoser = "*"
+django-debug-toolbar = "*"
+psycopg2-binary = "*"
+drf-nested-routers = "*"
+pillow = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 pytest = "*"
